# febits

./: Cargo.toml  README.md
doc/: all.html  index.html  sidebar-items.js
doc/prim_str/: fn.find_str.html  fn.find_str_exact.html  index.html  sidebar-items.js
doc/prim_u32/: fn.u32_to_u16.html  index.html  sidebar-items.js
doc/string_fe/: fn.bytes_to_hex_string.html  fn.index_hex_string_in_hex_string.html  fn.index_string_in_u8.html  index.html  sidebar-items.js
doc/vectors/: fn.sort_vec_floats_f32.html  index.html  sidebar-items.js
src/: lib.rs  prim_str.rs  prim_u32.rs  string_fe.rs  vectors.rs
